RESOLVED FIXED88165
Mac build fails with SVG disabled
https://bugs.webkit.org/show_bug.cgi?id=88165
Summary Mac build fails with SVG disabled
Tim Horton
Reported 2012-06-02 03:12:56 PDT
Two files need #if ENABLE(SVG): Source/WebCore/css/SVGCSSPropertyNames.in Source/WebCore/css/StyleResolver.cpp I have a patch.
Attachments
patch (1.86 KB, patch)
2012-06-02 03:17 PDT, Tim Horton
krit: review+
Tim Horton
Comment 1 2012-06-02 03:17:59 PDT
Tim Horton
Comment 2 2012-06-04 11:04:55 PDT
Note You need to log in before you can comment on or make changes to this bug.