Mac build fails with SVG disabled https://bugs.webkit.org/show_bug.cgi?id=88165

Reviewed by Dirk Schulze.

Wrap all of SVGCSSPropertyNames in #if ENABLE(SVG),
and mark an unused argument in collectMatchingRulesForList.

* css/SVGCSSPropertyNames.in:
* css/StyleResolver.cpp:
(WebCore::StyleResolver::collectMatchingRulesForList):


Canonical link: https://commits.webkit.org/106075@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119408 268f45cc-cd09-0410-ab3c-d52691b4dbfc